# arbitrage-project

./: .gitignore   Makefile  README.md  analyst_worker.py  app.py  docker-compose.yml  docker-compose.yml   index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements.txt   •env.example
backend/: app.py
backend/  compliance/:  cftc_part43.py  compliance_narratives.py  mifid_reporter.py  normalizers.py  pii_redactor.py  regulator_replay.py  sebi_otr.py  surveillance.py  volatility_cones.py  watchlists.py  zk_compliance.py
backend/ analytics/:   alpha_dna.py   tca_extended.py  __init__.py  attribution.py  capacity.py  correlations.py  expected_shortfall.py  experiments.py  feature_store.py  hedge_recipes.py  hedger.py  index_builder.py  intraday_var.py  lineage.py  optimizer.py  pnl_attribution.py  regime_map.py  report_generator.py  risk_metrics.py  scenario_generator.py  sentiment_ai.py  tca.py  trade_history.py
backend/ arbitrage/: venue_spreads.py
backend/ai/:  insight_agent.py   query_agent.py   rl_execution_agent.py  analyst_agent.py  deepfake_guard.py  drift_detection.py  ensemble_switcher.py  explainable_trades.py  factor_discovery_agent.py  pricing_predictor.py  query_copilot.py  risk_explainer.py  sentiment_ai.py  swarm_manager.py  voice_interface.py
backend/ai_brain/: auto_research.py  regime_oracle.py  strategy_generator.py
backend/alerts/: engine.py
backend/allocator/: capital_router.py  crisis_mode.py  meta_allocator.py
backend/api/: adamodar.py  alerts.py  broker_interface.py  data_api.py  main.py  open_dataset.py  orders.py  ws_candles.py  ws_greeks.py  ws_orderbook.py
backend/audit/: ai_audit_bot.py  entitlements.py  merkle_ledger.py  zk_proofs.py
backend/backtester/: backtester.py  digital_twin.py  replay_with_params.py  session_recorder.py  shadow_runner.py
backend/blockchain/: ledger.py
backend/bus/:  streams.py  schema.py  streams.py
backend/catalog/: catalog.schema.json
backend/common/: dates.py  feature_flags.py  io.py  mathx.py  metrics.py  utils.py
backend/config/:  latency.yaml   registry.yaml  alerts.yaml  altdata.yaml  bank_stress.yaml  capital_flows.yaml  core.yaml  feature-store.yaml  feature_flags.py  features.yaml  fix.yaml  governor.yaml  ledger.yaml  lineage.yaml  liquidity_surface.yaml  optimizer.yaml  policy.yaml  rival.yaml  rivals.yaml  scenarios.yaml  sentiment.yaml  sentimnt.yaml  settings.py  shocks.yaml  sovereign.yaml  synthetic.yaml  ui.yaml  venues.yaml
backend/dashboard/:  risk_dashboard.py  contagion_viz.py  hedge_dashboard.py  literacy_dashboard.py  pnl_attribution.py  regime_map.py
backend/data_ext/: corp_exhaust.py  geo_spatial.py  mood_index.py  news_bridge.py
backend/derivs/: option_chain.py  vol_surface.py
backend/dq/: quarantine.py  redactor.py  validator.py
backend/engine/:  aggregator.py   signal_bus.py  adapters.py  allocator.py  execution_engine.py  latency_monitor.py  region_router.py  registry.py  risk_manager.py  strategy_base.py  strategy_router.py
backend/execution/: cost_model_v2.py  darkpool_sim.py  oms.py  (+4 more)
backend/hft-gateway/: CMakeLists.txt
backend/hft-gateway/ configs/: exchanges.yaml  gateway.yaml  risk_limits.yaml
backend/hft-gateway/fpga/: constraints.xdc  feed_decoder.vhdl  order_encoder.vhdl
backend/hft-gateway/include/: md_snapshot.hpp  order_router.hpp  ringbuf.hpp  risk_wall.hpp  shared_memory.hpp  shm_layouts.hpp
backend/hft-gateway/scripts/: perf_bench.py  reset_shm.py  run_gateway.sh
backend/hft-gateway/shm/: .gitkeep  fills_out.shm  heartbeat.shm  md_ringbuf.shm  orders_in.shm  risk_wall.shm
backend/hft-gateway/src/: main_gateway.cpp  md_snapshot.cpp  order_router.cpp  risk_wall.cpp
backend/hft-gateway/tests/: _assert.hpp  test_md_snapshot.cpp  test_order_router.cpp  test_risk_wall.cpp
deploy/: docker-compose.override.yml
docker/: base.Dockerfile  worker.Dockerfile
docs/:  runbook.md  configs.md  demo_script.md  dr_runbook.md  features.md  literacy_mode.md  macro_llm_monitor (1).md  macro_llm_monitor.md  model_cards_guide.md  playbooks.md  readme.md  rl_execution_agent.md  rl_executionagent.md  runbook.md
platform/: audit.py  calendars.py  dlq.py  entitlements.py  envelope.py  otel.py
workers/: scenario_worker.py  sentiment_worker.py
•github/: ci.yml
(+4574 files in other folders)
